2004-01-28  Jeffrey Stedfast  <fejj@ximian.com>

	And thus completes the fixes for bug #52766.

	* em-folder-tree.c (tree_drag_drop): Don't call
	gtk_drag_get_data() manually here or we end up getting 2
	drag-data-received callbacks which is Not Good (tm).

	* em-folder-tree-model.c (drop_folder): Now takes a moved argument
	to specify whether or not the contents were moved (the move
	argument is just a hint).
	(drop_uid_list): Same.
	(em_folder_tree_model_drag_data_received): Updated for the above
	api changes.

2004-01-28  Not Zed  <NotZed@Ximian.com>

	** See bug #53179

	* mail-tools.c (mail_tool_get_local_movemail_path): Fix the
	movemail path.

	* mail-component.c (load_accounts): hack alert!
	* mail-send-recv.c (get_receive_type): hack alert!  hardcode mbox:
	to be a movemail source.

2004-01-28  Not Zed  <NotZed@Ximian.com>

	* mail-send-recv.c (setup_send_data): ref folder from
	mail_component_get_folder.

	* mail-ops.c (fetch_mail_fetch): ref the folder we get from
	mail_component_get_folder since it doesn't ref it.

2004-01-27  Jeffrey Stedfast  <fejj@ximian.com>

	* em-migrate.c (cp): Removed unneeded debug printfs.

	* em-folder-tree.c (tree_drag_data_received): Use
	gtk_tree_view_get_dest_row_at_pos() instead of
	gtk_tree_view_get_path_at_pos() since this is what Nautilus
	uses. Unfortunately, it still gives us back the wrong GtkTreePath
	so it looks to me like Gtk+ is borked. Apparently you need the
	latest and greatest gtk+-2.3.x cvs snapshot for this to work.

	* em-migrate.c (em_migrate_imap_caches_1_4): Copy the imap cache
	into the right place. Duh.

2004-01-27  Not Zed  <NotZed@Ximian.com>

	** See bug #53084 and others.
	
	* em-migrate.c (em_migrate): remove the vfolder_revert hack.

	* em-composer-utils.c (ask_confirm_for_only_bcc): removed unused
	vars.

	* mail-tools.c (mail_tool_get_local_inbox): removed, handled by
	mail_component_get_folder now.

	* mail-component.c (mail_component_*): Changed the api slightly.